# amocrm_mcp

./: .gitignore  AGENTS.md  README.md  concierge_backfill.py  pyproject.toml  vercel.json
amocrm_mcp/: auth.py  client.py  concierge_backfill.py  config.py  server.py
amocrm_mcp/models/: schemas.py
amocrm_mcp/tools/: account.py  analytics.py  companies.py  contacts.py  leads.py  notes.py  tasks.py  unsorted.py
api/: index.py
tests/: test_concierge_backfill.py  test_pagination.py
