[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amocrm-mcp"
version = "0.1.0"
description = "MCP server for amoCRM (Kommo) API v4 with tools for leads, contacts, companies, tasks, pipelines, notes, analytics, and custom fields"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "amocrm", "kommo", "crm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "aiolimiter",
]

[project.scripts]
amocrm-mcp = "amocrm_mcp.server:main"
amocrm-concierge-backfill = "amocrm_mcp.concierge_backfill:main"

[tool.setuptools.packages.find]
include = ["amocrm_mcp*"]
